<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="250px"
                android:layout_height="wrap_content"
                android:text="@string/reporter_name"
                />
            <EditText
                android:layout_width="300px"
                android:layout_height="wrap_content"
                android:id="@+id/reporter_name"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="250px"
                android:layout_height="wrap_content"
                android:text="@string/food_name"/>
            <EditText
                android:layout_width="300px"
                android:layout_height="wrap_content"
                android:id="@+id/food_name"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="250px"
                android:layout_height="wrap_content"
                android:text="@string/food_group"/>
            <Spinner
                android:layout_width="450px"
                android:layout_height="wrap_content"
                android:id="@+id/food_group"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="250px"
                android:layout_height="wrap_content"
                android:text="@string/meal_type"/>
            <Spinner
                android:layout_width="450px"
                android:layout_height="wrap_content"
                android:id="@+id/meal_type"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"/>

            <DatePicker
                android:id="@+id/date"
                android:layout_width="900px"
                android:layout_height="300px"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"/>

            <TimePicker
                android:layout_width="900px"
                android:layout_height="300px"
                android:id="@+id/time"
                android:timePickerMode="spinner"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="250px"
                android:layout_height="wrap_content"
                android:text="@string/note"/>
            <EditText
                android:layout_width="300px"
                android:layout_height="400px"
                android:id="@+id/note"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="400px"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:id="@+id/back"/>
            <Button
                android:layout_width="400px"
                android:layout_height="wrap_content"
                android:text="@string/review"
                android:id="@+id/review"/>


        </LinearLayout>

    </LinearLayout>

